# birdsong-cli

./: .gitignore  README.md  pyproject.toml
data/histograms/: ebird_US-NJ-009__2015_2026_1_12_barchart.txt  ebird_US-NY__1900_2026_1_12_barchart.txt
src/birdsong/: __init__.py  cli.py  errors.py  groups.py  histogram.py  names.py  playlist.py  taxonomy.py  util.py  xc.py
src/birdsong/data/: groups.toml
tests/: conftest.py  test_cli_errors.py  test_cli_filters.py  test_groups.py  test_help.py  test_histogram.py  test_playlist.py  test_taxonomy.py  test_workflow.py  test_xc.py
